--- a/templates/lhe/create_lhe_bab2_c_ketatausahaan.html
+++ b/templates/lhe/create_lhe_bab2_c_ketatausahaan.html
@@ -348,7 +348,7 @@
     </p>
     
     <a href="/lhe/add/b2/umum/{{id_lhe}}" class="btn btn-secondary mx-2"><i>&larr; Kembali ke Bab II.B Data Umum</i></a>
-    <a class="btn btn-primary my-3" href="#"><i>Lanjutkan Bab II.D Pendapatan Asli Daerah &rarr;</i></a>
+    <a class="btn btn-primary my-3" href="/lhe/add/b2/pkb/{{id_lhe}}"><i>Lanjutkan Bab II.D Pendapatan Asli Daerah &rarr;</i></a>
 </div>
 
 {% endblock%}
