--- a/templates/lhe/create_lhe_bab2_c_pap.html
+++ b/templates/lhe/create_lhe_bab2_c_pap.html
@@ -37,7 +37,7 @@
                         </thead>
                         <tr>
                             <th>Penetapan</th>
-                            <td class="small p-2">Rp.<span id="pembayaran_old"></span>,00</td>
+                            <td class="small p-2">Rp.<span id="penetapan_old"></span>,00</td>
                             <td><input type='number' min=0 id='penetapan' placeholder="Rp." class="small form-control"/></td>
                         </tr>
                         <tr>
