--- a/templates/lhe/create_lhe_bab2_c_bnkb.html
+++ b/templates/lhe/create_lhe_bab2_c_bnkb.html
@@ -327,7 +327,7 @@
 
     
     <a href="/lhe/add/b2/pkb/{{id_lhe}}" class="btn btn-secondary mx-2"><i>&larr; Kembali ke Pajak Daerah... A. PKB</i></a>
-    <a class="btn btn-primary my-3" href="#"><i>Lanjutkan ke Pajak Daerah C.PAP &rarr;</i></a>
+    <a class="btn btn-primary my-3" href="/lhe/add/b2/pap/{{id_lhe}}"><i>Lanjutkan ke Pajak Daerah C.PAP &rarr;</i></a>
 </div>
 
 {% endblock%}
