--- a/templates/lhe/create_lhe_bab2_c_pap.html
+++ b/templates/lhe/create_lhe_bab2_c_pap.html
@@ -179,7 +179,7 @@
                                                 {% if mypap.bulan1_akhir == 10 %} OKTOBER {% endif %}
                                                 {% if mypap.bulan1_akhir == 11 %} NOVEMBER {% endif %}
                                                 {% if mypap.bulan1_akhir == 12 %} DESEMBER {% endif %}
-                                    {{mypap.tahun1}} adalah Rp.{{mypap.jml_pembayaran_tahun1}},- atau {%widthratio mypap.selisih_tahun1_persen 100 1%}%, telah melebihi target capaian sebesar {% widthratio mypap.selisih_tahun1_persen 1 100 %} % dari target tahapan yang telah ditetapkan (100%). Target tahun {{mypap.tahun2}} sebesar Rp.{{mypap.jml_penetapan_tahun2|intcomma}},- dengan realisasi penerimaan sampai dengan 
+                                    {{mypap.tahun1}} adalah Rp.{{mypap.jml_pembayaran_tahun1|intcomma}},- atau {%widthratio mypap.selisih_tahun1_persen 100 1%}%, telah melebihi target capaian sebesar {% widthratio mypap.selisih_tahun1_persen 1 100 %} % dari target tahapan yang telah ditetapkan (100%). Target tahun {{mypap.tahun2}} sebesar Rp.{{mypap.jml_penetapan_tahun2|intcomma}},- dengan realisasi penerimaan sampai dengan 
                                                 {% if mypap.bulan2_akhir == 1 %} JANUARI {% endif %}
                                                 {% if mypap.bulan2_akhir == 2 %} FEBRUARI {% endif %}
                                                 {% if mypap.bulan2_akhir == 3 %} MARET {% endif %}
